Finilize REST endpoint:  - Add REST endpoint  - Add permission validation middleware  - Add filter validation middleware  - Update swagger
