# src/models/aggregations/durations.js
@@ -1,0 +1,10 @@
+const UndefinedDuration = {
+  _id: null,
+  total: null,
+  maxCallDuration: null,
+  averageCallDuration: null,
+  maxWaitingDuration: null,
+  averageWaitingDuration: null,
+};
+
+module.exports = UndefinedDuration;
